# vagabondengineer

./: .gitignore  LICENSE  README.md  create_issues.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
about/: models.py
about/templates/about/: about_page.html
assets/css/: input.css
assets/js/: vagabond_site.js
base/: blocks.py  models.py
base/templates/base/: form_page.html  form_page_landing.html  from_page_landing.html
base/templates/base/includes/: footer.html  header.html  streamfield_renderer.html
base/templates/blocks/: aligned_image.html  callout_block.html  clear_float.html  code_block.html  youtube_embed.html
base/templates/components/: search.html
base/templatetags/: navigation_tags.py
blog/: models.py
blog/templates/blog/: blog_index_page.html  blog_page.html
home/: models.py
home/templates/home/: home_page.html
static/css/: styles.css
vagabond_site/: wsgi.py
vagabond_site/settings/: base.py  dev.py  production.py
vagabond_site/templates/: base.html
