[project]
name = "vagabondengineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "boto3>=1.38.37",
    "dj-database-url>=3.0.0",
    "django-storages>=1.14.6",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "wagtail>=7.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]

[tool.djlint]
preserve_blank_lines = true
indent = 4
# max_line_length = 120
